Normalização dos Dados

--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 87,
    "id": "ef96cb83",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "['housing.csv']"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 88,
    "id": "13867197",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 89,
    "id": "afa416f7",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "(20640, 10)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 90,
    "id": "3621ccb6",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 116,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 91,
    "id": "c91ce2a3",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 117,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 92,
    "id": "a4d1e3ff",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 93,
    "id": "2b3a27e2",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 94,
    "id": "5689ceed",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 95,
    "id": "a20f991d",
    "metadata": {},
    "outputs": [],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 96,
    "id": "17abfccb",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
        "4                         1                           0  "
       ]
      },
-     "execution_count": 131,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 97,
    "id": "77f592f0",
    "metadata": {},
    "outputs": [
@@ -716,7 +716,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 98,
    "id": "fbbf3178",
    "metadata": {},
    "outputs": [
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 99,
    "id": "51eab8a5",
    "metadata": {},
    "outputs": [
@@ -800,12 +800,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 100,
    "id": "aa31083d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#####"
+    "y = df['median_house_value']\n",
+    "X = df.drop(columns='median_house_value')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "bfbd81e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.3, random_state=42\n",
+    ")"
    ]
   },
   {
@@ -818,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 102,
    "id": "75d04722",
    "metadata": {},
    "outputs": [
@@ -828,7 +843,7 @@
        "np.float64(1.002906976744186)"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 103,
    "id": "354c0890",
    "metadata": {},
    "outputs": [
@@ -864,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 104,
    "id": "984faf18",
    "metadata": {},
    "outputs": [],
@@ -873,43 +888,341 @@
     "\n",
     "# Imputando os dados faltantes apenas na coluna 'total_bedrooms'\n",
     "im = SimpleImputer(strategy='mean')\n",
-    "df['total_bedrooms'] = im.fit_transform(df[['total_bedrooms']])"
+    "X_train['total_bedrooms'] = im.fit_transform(X_train[['total_bedrooms']]) # Tirando a média pela amostra de treino\n",
+    "X_test['total_bedrooms'] = im.transform(X_test[['total_bedrooms']])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb085d4f",
+   "metadata": {},
+   "source": [
+    "## Normalização dos Dados"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
-   "id": "08eb0726",
+   "execution_count": 105,
+   "id": "e701f84e",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>housing_median_age</th>\n",
+       "      <th>total_rooms</th>\n",
+       "      <th>total_bedrooms</th>\n",
+       "      <th>population</th>\n",
+       "      <th>households</th>\n",
+       "      <th>median_income</th>\n",
+       "      <th>ocean_proximity_&lt;1H OCEAN</th>\n",
+       "      <th>ocean_proximity_INLAND</th>\n",
+       "      <th>ocean_proximity_ISLAND</th>\n",
+       "      <th>ocean_proximity_NEAR BAY</th>\n",
+       "      <th>ocean_proximity_NEAR OCEAN</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7061</th>\n",
+       "      <td>-118.02</td>\n",
+       "      <td>33.93</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>2400.0</td>\n",
+       "      <td>398.0</td>\n",
+       "      <td>1218.0</td>\n",
+       "      <td>408.0</td>\n",
+       "      <td>4.1312</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14689</th>\n",
+       "      <td>-117.09</td>\n",
+       "      <td>32.79</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>2183.0</td>\n",
+       "      <td>534.0</td>\n",
+       "      <td>999.0</td>\n",
+       "      <td>496.0</td>\n",
+       "      <td>2.8631</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17323</th>\n",
+       "      <td>-120.14</td>\n",
+       "      <td>34.59</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>1601.0</td>\n",
+       "      <td>282.0</td>\n",
+       "      <td>731.0</td>\n",
+       "      <td>285.0</td>\n",
+       "      <td>4.2026</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10056</th>\n",
+       "      <td>-121.00</td>\n",
+       "      <td>39.26</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>810.0</td>\n",
+       "      <td>151.0</td>\n",
+       "      <td>302.0</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>3.1094</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15750</th>\n",
+       "      <td>-122.45</td>\n",
+       "      <td>37.77</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>3188.0</td>\n",
+       "      <td>708.0</td>\n",
+       "      <td>1526.0</td>\n",
+       "      <td>664.0</td>\n",
+       "      <td>3.3068</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11284</th>\n",
+       "      <td>-117.96</td>\n",
+       "      <td>33.78</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>1330.0</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>658.0</td>\n",
+       "      <td>217.0</td>\n",
+       "      <td>6.3700</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11964</th>\n",
+       "      <td>-117.43</td>\n",
+       "      <td>34.02</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>3084.0</td>\n",
+       "      <td>570.0</td>\n",
+       "      <td>1753.0</td>\n",
+       "      <td>449.0</td>\n",
+       "      <td>3.0500</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5390</th>\n",
+       "      <td>-118.38</td>\n",
+       "      <td>34.03</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>2101.0</td>\n",
+       "      <td>569.0</td>\n",
+       "      <td>1756.0</td>\n",
+       "      <td>527.0</td>\n",
+       "      <td>2.9344</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>860</th>\n",
+       "      <td>-121.96</td>\n",
+       "      <td>37.58</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>3575.0</td>\n",
+       "      <td>597.0</td>\n",
+       "      <td>1777.0</td>\n",
+       "      <td>559.0</td>\n",
+       "      <td>5.7192</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15795</th>\n",
+       "      <td>-122.42</td>\n",
+       "      <td>37.77</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>4226.0</td>\n",
+       "      <td>1315.0</td>\n",
+       "      <td>2619.0</td>\n",
+       "      <td>1242.0</td>\n",
+       "      <td>2.5755</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>14448 rows × 13 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "longitude                     0\n",
-       "latitude                      0\n",
-       "housing_median_age            0\n",
-       "total_rooms                   0\n",
-       "total_bedrooms                0\n",
-       "population                    0\n",
-       "households                    0\n",
-       "median_income                 0\n",
-       "median_house_value            0\n",
-       "ocean_proximity_<1H OCEAN     0\n",
-       "ocean_proximity_INLAND        0\n",
-       "ocean_proximity_ISLAND        0\n",
-       "ocean_proximity_NEAR BAY      0\n",
-       "ocean_proximity_NEAR OCEAN    0\n",
-       "dtype: int64"
+       "       longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+       "7061     -118.02     33.93                35.0       2400.0           398.0   \n",
+       "14689    -117.09     32.79                20.0       2183.0           534.0   \n",
+       "17323    -120.14     34.59                24.0       1601.0           282.0   \n",
+       "10056    -121.00     39.26                14.0        810.0           151.0   \n",
+       "15750    -122.45     37.77                52.0       3188.0           708.0   \n",
+       "...          ...       ...                 ...          ...             ...   \n",
+       "11284    -117.96     33.78                35.0       1330.0           201.0   \n",
+       "11964    -117.43     34.02                33.0       3084.0           570.0   \n",
+       "5390     -118.38     34.03                36.0       2101.0           569.0   \n",
+       "860      -121.96     37.58                15.0       3575.0           597.0   \n",
+       "15795    -122.42     37.77                52.0       4226.0          1315.0   \n",
+       "\n",
+       "       population  households  median_income  ocean_proximity_<1H OCEAN  \\\n",
+       "7061       1218.0       408.0         4.1312                          1   \n",
+       "14689       999.0       496.0         2.8631                          0   \n",
+       "17323       731.0       285.0         4.2026                          0   \n",
+       "10056       302.0       138.0         3.1094                          0   \n",
+       "15750      1526.0       664.0         3.3068                          0   \n",
+       "...           ...         ...            ...                        ...   \n",
+       "11284       658.0       217.0         6.3700                          1   \n",
+       "11964      1753.0       449.0         3.0500                          0   \n",
+       "5390       1756.0       527.0         2.9344                          1   \n",
+       "860        1777.0       559.0         5.7192                          1   \n",
+       "15795      2619.0      1242.0         2.5755                          0   \n",
+       "\n",
+       "       ocean_proximity_INLAND  ocean_proximity_ISLAND  \\\n",
+       "7061                        0                       0   \n",
+       "14689                       0                       0   \n",
+       "17323                       0                       0   \n",
+       "10056                       1                       0   \n",
+       "15750                       0                       0   \n",
+       "...                       ...                     ...   \n",
+       "11284                       0                       0   \n",
+       "11964                       1                       0   \n",
+       "5390                        0                       0   \n",
+       "860                         0                       0   \n",
+       "15795                       0                       0   \n",
+       "\n",
+       "       ocean_proximity_NEAR BAY  ocean_proximity_NEAR OCEAN  \n",
+       "7061                          0                           0  \n",
+       "14689                         0                           1  \n",
+       "17323                         0                           1  \n",
+       "10056                         0                           0  \n",
+       "15750                         1                           0  \n",
+       "...                         ...                         ...  \n",
+       "11284                         0                           0  \n",
+       "11964                         0                           0  \n",
+       "5390                          0                           0  \n",
+       "860                           0                           0  \n",
+       "15795                         1                           0  \n",
+       "\n",
+       "[14448 rows x 13 columns]"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.isnull().sum()"
+    "X_train"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "9c64c017",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn import preprocessing\n",
+    "\n",
+    "cols = \"longitude,latitude,housing_median_age,total_rooms,total_bedrooms,population,households,median_income\".split(\",\")\n",
+    "scaler = preprocessing.StandardScaler()\n",
+    "\n",
+    "X_train[cols] = scaler.fit_transform(X_train[cols])\n",
+    "X_train[cols] = pd.DataFrame(X_train[cols], columns=cols)\n",
+    "\n",
+    "X_test[cols] = scaler.transform(X_test[cols])\n",
+    "X_test[cols] = pd.DataFrame(X_test[cols])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a4a1ed4",
+   "metadata": {},
+   "source": [
+    "# remoção de variáveis correlacionadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "514a38dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
