--- a/notebooks/main.ipynb
+++ b/notebooks/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 2,
    "id": "ef96cb83",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
        "['housing.csv']"
       ]
      },
-     "execution_count": 267,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 3,
    "id": "13867197",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 4,
    "id": "afa416f7",
    "metadata": {},
    "outputs": [
@@ -92,7 +92,7 @@
        "(20640, 10)"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 5,
    "id": "3621ccb6",
    "metadata": {},
    "outputs": [
@@ -226,7 +226,7 @@
        "4       565.0       259.0         3.8462            342200.0        NEAR BAY  "
       ]
      },
-     "execution_count": 270,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 6,
    "id": "c91ce2a3",
    "metadata": {},
    "outputs": [
@@ -406,7 +406,7 @@
        "max         500001.000000  "
       ]
      },
-     "execution_count": 271,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 7,
    "id": "a4d1e3ff",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 272,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 8,
    "id": "2b3a27e2",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 273,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 9,
    "id": "5689ceed",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 274,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 10,
    "id": "a20f991d",
    "metadata": {},
    "outputs": [],
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 11,
    "id": "17abfccb",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
        "4                         1                           0  "
       ]
      },
-     "execution_count": 276,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 12,
    "id": "77f592f0",
    "metadata": {},
    "outputs": [
@@ -726,7 +726,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 277,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 13,
    "id": "fbbf3178",
    "metadata": {},
    "outputs": [
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 14,
    "id": "43bf888c",
    "metadata": {},
    "outputs": [
@@ -938,7 +938,7 @@
        "509                           0  "
       ]
      },
-     "execution_count": 279,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 15,
    "id": "884ceaf7",
    "metadata": {},
    "outputs": [
@@ -959,7 +959,7 @@
        "(965, 14)"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -970,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 16,
    "id": "51eab8a5",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 17,
    "id": "aa31083d",
    "metadata": {},
    "outputs": [],
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 18,
    "id": "bfbd81e4",
    "metadata": {},
    "outputs": [],
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 19,
    "id": "1e38fb9d",
    "metadata": {},
    "outputs": [],
@@ -1055,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 20,
    "id": "c4bb11df",
    "metadata": {},
    "outputs": [],
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 21,
    "id": "75d04722",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1087,7 @@
        "np.float64(1.002906976744186)"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 22,
    "id": "354c0890",
    "metadata": {},
    "outputs": [
@@ -1123,7 +1123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 23,
    "id": "984faf18",
    "metadata": {},
    "outputs": [],
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 24,
    "id": "9c64c017",
    "metadata": {},
    "outputs": [],
@@ -1173,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 25,
    "id": "94ae8441",
    "metadata": {},
    "outputs": [],
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 53,
    "id": "b5d9a77b",
    "metadata": {},
    "outputs": [
@@ -1197,18 +1197,24 @@
      "output_type": "stream",
      "text": [
       "Dummy MAE: 78275.75\n",
-      "Dummy R²: -0.000\n"
+      "Dummy R²: -0.00\n",
+      "Dummy RMSE: 97734.71\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import mean_absolute_error, r2_score\n",
+    "from sklearn.metrics import mean_absolute_error, r2_score, mean_squared_error\n",
+    "import numpy as np\n",
     "\n",
     "mae_dummy = mean_absolute_error(y_test_eval, y_pred_dr)\n",
     "r2_dummy = r2_score(y_test_eval, y_pred_dr)\n",
     "\n",
+    "mse_dummy = mean_squared_error(y_test_eval, y_pred_dr)\n",
+    "mrse_dummy = np.sqrt(mse_dummy)\n",
+    "\n",
     "print(f'Dummy MAE: {mae_dummy:.2f}')\n",
-    "print(f'Dummy R²: {r2_dummy:.3f}')"
+    "print(f'Dummy R²: {r2_dummy:.2f}')\n",
+    "print(f'Dummy RMSE: {mrse_dummy:.2f}')"
    ]
   },
   {
@@ -1217,6 +1223,303 @@
    "metadata": {},
    "source": [
     "## Regressão Linear"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "613432be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "linear = LinearRegression()\n",
+    "linear.fit(X_train_clean, y_train_clean)\n",
+    "\n",
+    "y_pred_linear = linear.predict(X_test_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "0c4cc6b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regressão Linear MAE: 44943.43\n",
+      "Regressão Linear R²: 0.61\n",
+      "Regressão Linear RMSE: 60772.94\n"
+     ]
+    }
+   ],
+   "source": [
+    "mae_linear = mean_absolute_error(y_test_eval, y_pred_linear)\n",
+    "r2_linear = r2_score(y_test_eval, y_pred_linear)\n",
+    "\n",
+    "mse_linear = mean_squared_error(y_test_eval, y_pred_linear)\n",
+    "mrse_linear = np.sqrt(mse_linear)\n",
+    "\n",
+    "print(f'Regressão Linear MAE: {mae_linear:.2f}')\n",
+    "print(f'Regressão Linear R²: {r2_linear:.2f}')\n",
+    "print(f'Regressão Linear RMSE: {mrse_linear:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f46a18d",
+   "metadata": {},
+   "source": [
+    "## Árvore de Decisão"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "dd52e544",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "\n",
+    "tree = DecisionTreeRegressor(random_state=42)\n",
+    "tree.fit(X_train_clean, y_train_clean)\n",
+    "\n",
+    "y_pred_tree = tree.predict(X_test_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "1cd6381e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Árvore de Decisão MAE: 41568.28\n",
+      "Árvore de Decisão R²: 0.59\n",
+      "Árvore de Decisão RMSE: 62741.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "mae_tree = mean_absolute_error(y_test_eval, y_pred_tree)\n",
+    "r2_tree = r2_score(y_test_eval, y_pred_tree)\n",
+    "\n",
+    "mse_tree = mean_squared_error(y_test_eval, y_pred_tree)\n",
+    "mrse_tree = np.sqrt(mse_tree)\n",
+    "\n",
+    "print(f'Árvore de Decisão MAE: {mae_tree:.2f}')\n",
+    "print(f'Árvore de Decisão R²: {r2_tree:.2f}')\n",
+    "print(f'Árvore de Decisão RMSE: {mrse_tree:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30f4ef4d",
+   "metadata": {},
+   "source": [
+    "## Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "019c0245",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "forest = RandomForestRegressor(random_state=42)\n",
+    "forest.fit(X_train_clean, y_train_clean)\n",
+    "\n",
+    "y_pred_forest = forest.predict(X_test_eval)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "35cbd6d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Árvore de Decisão MAE: 30061.25\n",
+      "Árvore de Decisão R²: 0.79\n",
+      "Árvore de Decisão RMSE: 44621.21\n"
+     ]
+    }
+   ],
+   "source": [
+    "mae_forest = mean_absolute_error(y_test_eval, y_pred_forest)\n",
+    "r2_forest = r2_score(y_test_eval, y_pred_forest)\n",
+    "\n",
+    "mse_forest = mean_squared_error(y_test_eval, y_pred_forest)\n",
+    "mrse_forest = np.sqrt(mse_forest)\n",
+    "\n",
+    "print(f'Árvore de Decisão MAE: {mae_forest:.2f}')\n",
+    "print(f'Árvore de Decisão R²: {r2_forest:.2f}')\n",
+    "print(f'Árvore de Decisão RMSE: {mrse_forest:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f05ddb96",
+   "metadata": {},
+   "source": [
+    "## Resultados"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "f301ef76",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resultados_dados = {\n",
+    "    'Métricas': ['MAE', 'RMSE', 'R²'],\n",
+    "    'Dummy Model': [mae_dummy, mrse_dummy, r2_dummy],\n",
+    "    'Regressão Linear': [mae_linear, mrse_linear, r2_linear],\n",
+    "    'Árvore de Decisão': [mae_tree, mrse_tree, r2_tree],\n",
+    "    'Random Forest': [mae_forest, mrse_forest, r2_forest],\n",
+    "}\n",
+    "\n",
+    "resultados_df = pd.DataFrame(resultados_dados)\n",
+    "resultados_df = resultados_df.round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "3f094180",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Métricas</th>\n",
+       "      <th>Dummy Model</th>\n",
+       "      <th>Regressão Linear</th>\n",
+       "      <th>Árvore de Decisão</th>\n",
+       "      <th>Random Forest</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MAE</td>\n",
+       "      <td>78275.75</td>\n",
+       "      <td>44943.43</td>\n",
+       "      <td>41568.28</td>\n",
+       "      <td>30061.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>RMSE</td>\n",
+       "      <td>97734.71</td>\n",
+       "      <td>60772.94</td>\n",
+       "      <td>62741.99</td>\n",
+       "      <td>44621.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>R²</td>\n",
+       "      <td>-0.00</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>0.79</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Métricas  Dummy Model  Regressão Linear  Árvore de Decisão  Random Forest\n",
+       "0      MAE     78275.75          44943.43           41568.28       30061.25\n",
+       "1     RMSE     97734.71          60772.94           62741.99       44621.21\n",
+       "2       R²        -0.00              0.61               0.59           0.79"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultados_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0470dd69",
+   "metadata": {},
+   "source": [
+    "## Aprimorando Hiper-Parâmetros do Random Forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33f891a6",
+   "metadata": {},
+   "source": [
+    "Atributos Mais Importantes para o Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "e54a46dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "median_income     0.431\n",
+      "ocean_proximity_INLAND     0.161\n",
+      "longitude      0.120\n",
+      "latitude       0.111\n",
+      "housing_median_age     0.048\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col, val in sorted(\n",
+    "    zip(\n",
+    "        X_train_clean.columns,\n",
+    "        forest.feature_importances_,\n",
+    "    ),\n",
+    "    key=lambda x: x[1],\n",
+    "    reverse=True,\n",
+    ")[:5]:\n",
+    "    print(f\"{col:10}{val:10.3f}\")"
    ]
   }
  ],
